2009-03-15 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-data-def.h (na_data_def_get_data_def): New function.

	* src/core/na-data-def.c: New file.

	* src/core/Makefile.am: Updated accordingly.

	* src/core/na-icontextual-factory.c:
	* src/core/na-object-profile-factory.c:
	Update command-line options to not have duplicates.

	* src/utils/nautilus-actions-new.c:
	Use new ArgFromDataDef structure and display suitable help.

	* src/core/na-icontextual-factory.c:
	* src/core/na-object-action-factory.c:
	* src/core/na-object-item-factory.c:
	* src/core/na-object-profile-factory.c:
	* src/utils/nautilus-actions-new.c:
	Update data definitions to handle command-line arguments.

2009-03-10 Pierre Wieser <pwieser@trychlos.org>

	* src/utils/nautilus-actions-new.c:
	Define a structure to host NADataDef argument definitions.

	* src/api/na-data-def.h:
	Add parameters to be able to manage command-line arguments.

	* src/core/na-icontextual-factory.c:
	* src/core/na-object-action-factory.c:
	* src/core/na-object-id-factory.c:
	* src/core/na-object-item-factory.c:
	* src/core/na-object-profile-factory.c: Updated accordingly.

	* src/core/na-io-provider.c (build_hierarchy):
	Attach the child item to its parent.

	* src/core/na-object-id.c (instance_dispose):
	* src/core/na-object-item.c (instance_dispose):
	* src/core/na-object.c (instance_dispose):
	Add debug messages.

	* src/core/na-dbus-tracker.h: Remove no more used file.

	* src/core/Makefile.am: Updated accordingly.

	* src/core/na-icontextual.c:
	* src/core/na-object-profile.c:
	* src/plugin-tracker/na-tracker-dbus.c:
	* src/utils/nautilus-actions-run.c:
	Remove all references to NATrackedItem obsolete class.

	* src/api/na-ifactory-object-data.h:
	Rename v1 action data group to NA_FACTORY_ACTION_V1_GROUP.

	* src/core/na-object-action-factory.c:
	No more try to read obsolete NAFO_DATA_TARGET_BACKGROUND data.

	* src/plugin-tracker/na-tracker.c
	(menu_provider_get_background_items):