@@ -1,5 +1,9 @@
 2009-03-15 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/utils/nautilus-actions-new.c:
+	Cleanup old command-line code.
+	Check for incompatibility between boolean arguments.
+
 	* src/api/na-data-def.h (na_data_def_get_data_def): New function.
 
 	* src/core/na-data-def.c: New file.
